cdk synth now works on the sample code for csharp and java. This has so many changes that we will need to update the actual guide.